@@ -1,9 +1,11 @@
-CVS - Eric Kidd <eric.kidd@pobox.com> - 23 January 2000
+CVS - Eric Kidd <eric.kidd@pobox.com> - 25 January 2000
 
   * Fixed lots of gcc warnings.
   * Added a new 'xmlrpc_server_info' class, which allows you to
     set options on a per-server basis.
   * Added support for HTTP Basic authentication.
+  * Added internal implementation of system.multicall, lots of brutal test
+    cases, and stubs for other system.* commands.
 
 0.9.5 - Eric Kidd <eric.kidd@pobox.com> - 20 January 2000
 
